@@ -3,10 +3,12 @@ Package: R.utils
 ================
 
 Version: 1.18.0 [2012-10-29]
-o GENERALIZATION: Now filePath() does a better job reading Windows
-  Shell Links/Windows Shortcut (*.lnk) files.
 o Added trial version of readWindowsShellLink(), which eventually
   will replace readWindowsShortcut().
+o GENERALIZATION: Now filePath() does a better job reading Windows
+  Shell Links/Windows Shortcut (*.lnk) files.
+o ROBUSTNESS: Now createWindowsShortcut() uses an improved validation
+  strategy of the created *.lnk file.
 
 
 Version: 1.17.4 [2012-10-26]
